--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>[STORE] BAD PANDA CLUBS </title>
+    <title>[STORE] BAD PANDAS CLUB </title>
     <img src="images/panda.png" alt="Panda Logo" class="h-12">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
@@ -21,7 +21,7 @@
 <body class="bg-black text-white">
     <!-- Thanh điều hướng -->
     <nav class="fixed top-0 left-0 w-full bg-black py-4 px-6 flex justify-between items-center z-50">
-        <h1 class="text-white font-bold text-lg">[STORE] BAD PANDA CLUBS - FIVEM SERVICES</h1>
+        <h1 class="text-white font-bold text-lg">STORE] BAD PANDAS CLUB - FIVEM SERVICES</h1>
         <ul class="flex space-x-6">
             <li class="nav-item"><a href="#home-section" class="nav-link active">Trang chủ</a></li>
             <li class="nav-item"><a href="#project-section" class="nav-link">Dự án</a></li>
@@ -91,18 +91,18 @@
         <h2 class="text-3xl font-bold text-yellow-500">Thành Viên</h2>
         <p>Những người đã góp phần xây dựng STORE Đến Tận Ngày Nay.</p>
         <div class="grid md:grid-cols-3 lg:grid-cols-4 gap-6 mt-8">
-            <!-- Nguyễn Trí -->
-            <div class="bg-gray-900 p-6 rounded-lg text-center">
-                <img src="images/cuncon.png" alt="Nguyễn Trí" class="w-20 mx-auto rounded-full">
-                <h3 class="text-xl font-bold mt-4">Cún Con</h3>
-                <p class="text-yellow-500 font-semibold">Developer</p>
-            </div>
-
             <!-- Decoyy -->
             <div class="bg-gray-900 p-6 rounded-lg text-center">
-                <img src="images/decoyy.png" alt="Decoyy" class="w-20 mx-auto rounded-full">
+                <img src="images/decoyy.png" alt="Nguyễn Trí" class="w-20 mx-auto rounded-full">
                 <h3 class="text-xl font-bold mt-4">Decoyy</h3>
-                <p class="text-yellow-500 font-semibold">Designer</p>
+                <p class="text-yellow-500 font-semibold">Design - Chủ Team</p>
+            </div>
+
+            <!-- Nguyễn Trí -->
+            <div class="bg-gray-900 p-6 rounded-lg text-center">
+                <img src="images/cuncon.png" alt="Decoyy" class="w-20 mx-auto rounded-full">
+                <h3 class="text-xl font-bold mt-4">Nguyễn Trí (Cún Con)</h3>
+                <p class="text-yellow-500 font-semibold">Designe -  Development</p>
             </div>
         </div>
     </section>
