--- a/index.html
+++ b/index.html
@@ -95,14 +95,14 @@
             <div class="bg-gray-900 p-6 rounded-lg text-center">
                 <img src="images/decoyy.png" alt="Nguyễn Trí" class="w-20 mx-auto rounded-full">
                 <h3 class="text-xl font-bold mt-4">Decoyy</h3>
-                <p class="text-yellow-500 font-semibold">Design - Chủ Team</p>
+                <p class="text-yellow-500 font-semibold">Designẻ - Chủ Team</p>
             </div>
 
             <!-- Nguyễn Trí -->
             <div class="bg-gray-900 p-6 rounded-lg text-center">
                 <img src="images/cuncon.png" alt="Decoyy" class="w-20 mx-auto rounded-full">
                 <h3 class="text-xl font-bold mt-4">Nguyễn Trí (Cún Con)</h3>
-                <p class="text-yellow-500 font-semibold">Designe -  Development</p>
+                <p class="text-yellow-500 font-semibold">Designer -  Development</p>
             </div>
         </div>
     </section>
