--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div class="bg-gray-900 p-6 rounded-lg text-center">
                 <img src="images/decoyy.png" alt="Nguyễn Trí" class="w-20 mx-auto rounded-full">
                 <h3 class="text-xl font-bold mt-4">Decoyy</h3>
-                <p class="text-yellow-500 font-semibold">Designẻ - Chủ Team</p>
+                <p class="text-yellow-500 font-semibold">Designer - Founder</p>
             </div>
 
             <!-- Nguyễn Trí -->
