--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body class="bg-black text-white">
     <!-- Thanh điều hướng -->
     <nav class="fixed top-0 left-0 w-full bg-black py-4 px-6 flex justify-between items-center z-50">
-        <h1 class="text-white font-bold text-lg">STORE] BAD PANDAS CLUB - FIVEM SERVICES</h1>
+        <h1 class="text-white font-bold text-lg">[STORE] BAD PANDAS CLUB - FIVEM SERVICES</h1>
         <ul class="flex space-x-6">
             <li class="nav-item"><a href="#home-section" class="nav-link active">Trang chủ</a></li>
             <li class="nav-item"><a href="#project-section" class="nav-link">Dự án</a></li>
