--- a/index.html
+++ b/index.html
@@ -95,14 +95,21 @@
             <div class="bg-gray-900 p-6 rounded-lg text-center">
                 <img src="images/decoyy.png" alt="Nguyễn Trí" class="w-20 mx-auto rounded-full">
                 <h3 class="text-xl font-bold mt-4">Decoyy</h3>
-                <p class="text-yellow-500 font-semibold">Designer - Founder</p>
+                <p class="text-yellow-500 font-semibold">Designer - Admin</p>
             </div>
 
             <!-- Nguyễn Trí -->
             <div class="bg-gray-900 p-6 rounded-lg text-center">
-                <img src="images/cuncon.png" alt="Decoyy" class="w-20 mx-auto rounded-full">
+                <img src="images/cuncon.png" alt="Nguyễn Trí" class="w-20 mx-auto rounded-full">
                 <h3 class="text-xl font-bold mt-4">Nguyễn Trí (Cún Con)</h3>
-                <p class="text-yellow-500 font-semibold">Designer -  Development</p>
+                <p class="text-yellow-500 font-semibold">Designer -  Development - Development Tool</p>
+            </div>
+
+            <!-- Kaydy W -->
+            <div class="bg-gray-900 p-6 rounded-lg text-center">
+                <img src="images/kw.png" alt="Kaydy W" class="w-20 mx-auto rounded-full">
+                <h3 class="text-xl font-bold mt-4">Kaydy W </h3>
+                <p class="text-yellow-500 font-semibold">Founder</p>
             </div>
         </div>
     </section>
