--- a/index.html
+++ b/index.html
@@ -83,6 +83,30 @@
                    Tham gia Discord
                 </a>
             </div>
+
+            <!-- HEAVEN GARDEN -->
+            <div class="bg-gray-800 p-6 rounded-lg">
+                <img src="images/HEAVEN_GARDEN.png" alt="HEAVEN GARDEN" class="w-32 mx-auto">
+                <h3 class="font-bold text-white mt-4">𝐇𝐄𝐀𝐕𝐄𝐍 𝐆𝐀𝐑𝐃𝐄𝐍</h3>
+                <p>Máy Chủ Discord Của 𝐇𝐄𝐀𝐕𝐄𝐍 𝐆𝐀𝐑𝐃𝐄𝐍 ROLEPLAY .</p>
+                <p class="text-green-500 font-bold">Đang Hoạt Động</p>
+                <a href="https://discord.gg/Tarn8m7acJF" 
+                   class="inline-block bg-blue-500 text-white px-4 py-2 mt-3 rounded-lg hover:bg-blue-700">
+                   Tham gia Discord
+                </a>
+            </div>
+
+            <!-- NIGHT COMMUNITY -->
+            <div class="bg-gray-800 p-6 rounded-lg">
+                <img src="images/logov3.png" alt="𝐍𝐈𝐆𝐇𝐓 𝐂𝐎𝐌𝐌𝐔𝐍𝐈𝐓𝐘" class="w-32 mx-auto">
+                <h3 class="font-bold text-white mt-4"𝐍𝐈𝐆𝐇𝐓 𝐂𝐎𝐌𝐌𝐔𝐍𝐈𝐓𝐘</h3>
+                <p>Dự án Đầu Tay Của BT COMMUNITY .</p>
+                <p class="text-green-500 font-bold">Đang Hoạt Động</p>
+                <a href="https://discord.gg/tjQVP4fj" 
+                   class="inline-block bg-blue-500 text-white px-4 py-2 mt-3 rounded-lg hover:bg-blue-700">
+                   Tham gia Discord
+                </a>
+            </div>
         </div>
     </section>
 
