--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <!-- NIGHT COMMUNITY -->
             <div class="bg-gray-800 p-6 rounded-lg">
                 <img src="images/logov3.png" alt="𝐍𝐈𝐆𝐇𝐓 𝐂𝐎𝐌𝐌𝐔𝐍𝐈𝐓𝐘" class="w-32 mx-auto">
-                <h3 class="font-bold text-white mt-4"𝐍𝐈𝐆𝐇𝐓 𝐂𝐎𝐌𝐌𝐔𝐍𝐈𝐓𝐘</h3>
+                <h3 class="font-bold text-white mt-4">𝐍𝐈𝐆𝐇𝐓 𝐂𝐎𝐌𝐌𝐔𝐍𝐈𝐓𝐘</h3>
                 <p>Dự án Đầu Tay Của BT COMMUNITY .</p>
                 <p class="text-green-500 font-bold">Đang Hoạt Động</p>
                 <a href="https://discord.gg/tjQVP4fj" 
